--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spazedog.xposed.additionsgb"
     android:versionCode="38"
-    android:versionName="2.3.8+" >
+    android:versionName="2.3.8.2" >
 
     <uses-sdk
         android:minSdkVersion="9"
