Suppress lint warning (since ADT 21) (uses the default anyway, allow app backup using adb - not a security concern here) Very minor change

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="Xposed Additions"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:allowBackup="true">
         
         <meta-data android:value="true" android:name="xposedmodule" />
         <meta-data android:value="30+" android:name="xposedminversion" />
