--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spazedog.xposed.additionsgb"
-    android:versionCode="62"
-    android:versionName="3.4.1.5" >
+    android:versionCode="61"
+    android:versionName="3.4.0" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -15,7 +15,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="Xposed Additions"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:allowBackup="true">
         
         <meta-data android:value="true" android:name="xposedmodule" />
         <meta-data android:value="30+" android:name="xposedminversion" />
