--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spazedog.xposed.additionsgb"
+    android:icon="@drawable/ic_launcher"
     android:versionCode="62"
     android:versionName="3.4.1.11" >
 
-    <uses-sdk
+    <!--<uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="21" />-->
     
     <uses-permission android:name="net.dinglisch.android.tasker.PERMISSION_RUN_TASKS"/>
     <uses-permission android:name="android.permission.CAMERA" />
