--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spazedog.xposed.additionsgb"
-    android:icon="@drawable/ic_launcher"
-    android:versionCode="63"
-    android:versionName="3.5.0.2" >
+    android:versionCode="64"
+    android:versionName="3.5.2.1" >
 
     <!--<uses-sdk
         android:minSdkVersion="9"
@@ -15,7 +14,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="Xposed Additions"
         android:theme="@style/AppTheme" android:allowBackup="true">
         
