--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spazedog.xposed.additionsgb"
-    android:versionCode="66"
-    android:versionName="3.5.4.1" >
+    android:versionCode="67"
+    android:versionName="3.5.5.1" >
 
     <!--<uses-sdk
         android:minSdkVersion="9"
@@ -24,7 +24,8 @@
 
         <receiver android:name=".SettingsReceiver">
             <intent-filter>
-                <action android:name="user.additionsgb.service.broadcast.settings" />
+                <action android:name="com.spazedog.xposed.additionsgb.ACTION_XSERVICE_SHUTDOWN" />
+                <action android:name="com.spazedog.xposed.additionsgb.ACTION_XSERVICE_READY" />
             </intent-filter>
         </receiver>
 
