--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,9 @@
-.gradle
+.gradle/
 /local.properties
 .DS_Store
-/build
-projects/xposedAdditions/build
+build/
 
 #IntelliJ private
-/*.iml
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
+*.iml
+.idea/
 
